# bloodscrape

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
src/: main.rs
