[package]
name = "bloodscrape"
version = "0.1.0"
authors = ["tyler"]
edition = "2018"
description = "bloodscrape mandatory description"
repository = "https://github.com/gawmanarnar/bloodscrape"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
table-extract = "0.2"
scraper = "0.12.0"
dotenv_codegen = "0.15.0"